[gd_scene load_steps=3 format=3 uid="uid://clo3iyc887yw5"]

[ext_resource type="Script" uid="uid://y0cm81dw2q5e" path="res://Scenes/DialogArea.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://bx3tnmau3qd2d" path="res://imports/music/8-Bit Coin Sound Effect.ogg" id="2_tdj7p"]

[node name="DialogArea" type="Area2D"]
process_mode = 3
collision_layer = 0
collision_mask = 2
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
visibility_layer = 2

[node name="sfx_interact" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_tdj7p")
volume_db = -10.842
area_mask = 31

[connection signal="area_entered" from="." to="." method="_on_DialogArea_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_DialogArea_area_exited"]
